各プランとの画像を切り替える/LLMの正確性を高くする/Claudeモデルを4.5へ変更

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ __pycache__/
 */*.pyc
 *.pyo
 *.pyd
-uploads/plant_images/*
+static/uploads/plant_images/*
 __pycache__/
 static/uploads/plant_images/*
