feat: ログ機能の強化（エラーログ分離、gunicornログ設定）およびBluetoothデーモンの自動再起動・システム再起動機能の追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs/
 *.log
+log
 
 # OS Files
 .DS_Store
@@ -32,6 +33,8 @@ __pycache__/
 data/plant_monitor.db
 data/*.db
 *.db
+*.db-shm
+*.db-wal
 
 # Uploads
 static/uploads/
